fix tasks padding unevenly when they have no status-containers

--- a/web/ui-elements/task-card.css
+++ b/web/ui-elements/task-card.css
@@ -11,6 +11,7 @@
     color: black;
     box-shadow: 0 3px 3px rgba(0,0,0,0.1);
     padding: 0.55em;
+    padding-bottom: 0.35em;
     padding-top: 0.35em;
     padding-right: 0.35em;
     cursor: pointer;
@@ -82,8 +83,8 @@
     opacity: 1;
 }
 
-.task:has(:not(.status-container)) {
-    padding-bottom: 0.35em;
+.task:has(.status-container) {
+    padding-bottom: 0.55em;
 }
 
 
